# iquaflow

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  conda.yaml  create_uml.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/source/: Course.ipynb  UserGuide.ipynb  about.rst  conf.py  index.rst  iq_tool_box.datasets.rst  iq_tool_box.experiments.rst  iq_tool_box.rst  iquaflow.datasets.rst  iquaflow.experiments.rst  iquaflow.metrics.rst  iquaflow.quality_metrics.rst  iquaflow.rst  modules.rst
iquaflow/: _version.py  aws_utils.py  ds_stats.py  sanity.py
iquaflow/datasets/: __init__.py  ds_exceptions.py  ds_tools.py  modifier_blur.py  modifier_gsd.py  modifier_jpg.py  modifier_quant.py  modifier_rer.py  modifier_sharpness.py  modifier_snr.py  modifier_sr.py
iquaflow/experiments/: __init__.py  experiment_info.py  experiment_setup.py  experiment_visual.py  task_execution.py  utils.py
iquaflow/metrics/: __init__.py  base_metric.py  detection_metrics.py  rer_metric.py  sharpness_metric.py  snr_metric.py
iquaflow/quality_metrics/: __init__.py  benchmark.py  cfg_generator.py  data.sh  dataloader.py  gaussian_blur_metrics.py  gsd_metrics.py  notifier.py  (+25 more)
notebooks/: Statistics.ipynb  Visualizations.ipynb  examples.py  stats_01.html  xview2coco.ipynb
tests/: test_dataset.py  test_ds_stats.py  test_ds_tools.py  test_example.py  test_experiment_info.py  test_experiment_setup.py  test_experiment_visual.py  test_metrics.py  test_modifiers.py  test_quality_metrics.py  test_regressor.py  test_sanity_check.py  test_task_execution.py
(+63 files in other folders)
