[metadata]
name = IQToolBox
author = Satellogic
author_email = Satellogic
description = Satellogic
long_description = file: README.md
url = http:
[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy>=1.17
    pandas>=0.22.0
    SciPy >= 0.13.3
    scikit-learn>=0.19.1
    matplotlib>=2.2.2
    mlflow>=1.0
    GpyOpt>=1.2.5
    geopandas>=0.8.1
    mlflow>=1.0
    pycocotools>=2.0.2
    opencv-python==4.4.0.44
    easyimages>=1.91
    ipython
    seaborn==0.11.1
    scikit-image>=0.17.2
    joblib>=1.0.1
    sagemaker>=2.59.1.post0
    boto3
    torch>=1.7.1
    torchvision>=0.8.1
    rasterio>=1.2.10

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mypy
    pytest-doctestplus
doc =
    sphinx
    sphinx_hoverxref

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = iquaflow/_version.py
versionfile_build = iquaflow/_version.py
tag_prefix = v
parentdir_prefix = iquaflow-

[tool:pytest]
norecursedirs =
    .git
    .tox
    dist
    env
    build
    venv
python_files =
    test_*.py
addopts = --strict-markers
markers =
    slow

[flake8]
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950

[options.package_data]
* = *.cfg, *.json
